--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.12.2",
+    "std": "^0.1.40",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
